<resources>
    <string name="app_name">silviApp</string>
    <string name="titulo">Listado De Productos</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="usuario">user</string>
    <string name="password">1234</string>
    <string name="misDatos">TiendaApp</string>
    <string name="textusuario">Escriba su nombre de usuario</string>
    <string name="textpassword">Escriba su contraseña</string>
    <string name="cerrarSesion">Salir</string>
    <string name="add_nombre">Nombre</string>
    <string name="add_precio">Precio</string>
    <string name="add_desc">Descripcion</string>
    <string name="btn_add">Agregar</string>
    <string name="btn_back">Volver</string>
    <string name="add_producto_title">Agregar Nuevo Producto</string>
    <string name="txt_titulo_editar">Editar Producto: %1$s</string>
    <string name="txt_btn_nombreProducto">Nombre producto</string>
    <string name="txt_btn_precioProducto">Precio producto</string>
    <string name="txt_btn_descripcionProducto">Descripcion producto</string>
    <string name="txt_btn_editar">Editar</string>
    <string name="txt_btn_eliminar">Eliminar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
